--- a/index.html
+++ b/index.html
@@ -5,81 +5,135 @@
         <p>Texas A&M University</p>
     </head>
     <body>
-        <h1>I am very important!</h1>
+        <h1>CSCE 420 Important Links</h1>
+        <h3>Lecture Screenshots</h3>
         <table>
             <tr>
                 <td>
                     <a href="Screenshot 08-30.pdf" target="_blank">08/30/2022 Lecture Screenshots</a>
+                </td>
+                <td>
+                    <p>description</p>
                 </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 09-01.pdf" target="_blank">09/01/2022 Lecture Screenshots</a>
                 </td>
+                <td>
+                    <p>description</p>
+                </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 09-06.pdf" target="_blank">09/06/2022 Lecture Screenshots</a>
+                </td>
+                <td>
+                    <p>description</p>
                 </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 09-08.pdf" target="_blank">09/08/2022 Lecture Screenshots</a>
                 </td>
+                <td>
+                    <p>description</p>
+                </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 09-13.pdf" target="_blank">09/13/2022 Lecture Screenshots</a>
+                </td>
+                <td>
+                    <p>description</p>
                 </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 09-15.pdf" target="_blank">09/15/2022 Lecture Screenshots</a>
                 </td>
+                <td>
+                    <p>description</p>
+                </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 09-20.pdf" target="_blank">09/20/2022 Lecture Screenshots</a>
+                </td>
+                <td>
+                    <p>description</p>
                 </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 09-22.pdf" target="_blank">09/22/2022 Lecture Screenshots</a>
                 </td>
+                <td>
+                    <p>description</p>
+                </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 09-27.pdf" target="_blank">09/27/2022 Lecture Screenshots</a>
+                </td>
+                <td>
+                    <p>description</p>
                 </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 10-18.pdf" target="_blank">10/18/2022 Lecture Screenshots</a>
                 </td>
+                <td>
+                    <p>description</p>
+                </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 10-20.pdf" target="_blank">10/20/2022 Lecture Screenshots</a>
+                </td>
+                <td>
+                    <p>description</p>
                 </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 10-27.pdf" target="_blank">10/27/2022 Lecture Screenshots</a>
                 </td>
+                <td>
+                    <p>description</p>
+                </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 11-01.pdf" target="_blank">11/01/2022 Lecture Screenshots</a>
+                </td>
+                <td>
+                    <p>description</p>
                 </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 11-03.pdf" target="_blank">11/03/2022 Lecture Screenshots</a>
                 </td>
+                <td>
+                    <p>description</p>
+                </td>
             </tr>
             <tr>
                 <td>
                     <a href="Screenshot 11-08.pdf" target="_blank">11/08/2022 Lecture Screenshots</a>
+                </td>
+                <td>
+                    <p>description</p>
+                </td>
+            </tr>
+        </table>
+        <h3>Syllabus</h3>
+        <table>
+            <tr>
+                <td>
+                    <a href="syllabus.pdf" target="_blank">Fall 2022 Syllabus</a>
                 </td>
             </tr>
         </table>
