Added two more lectures

--- a/index.html
+++ b/index.html
@@ -82,6 +82,22 @@
             </tr>
             <tr>
                 <td>
+                    <a href="Screenshot 10-04.pdf" target="_blank">10/04/2022 Lecture Screenshots</a>
+                </td>
+                <td>
+                    <p>description</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="Screenshot 10-06.pdf" target="_blank">10/06/2022 Lecture Screenshots</a>
+                </td>
+                <td>
+                    <p>description</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
                     <a href="Screenshot 10-18.pdf" target="_blank">10/18/2022 Lecture Screenshots</a>
                 </td>
                 <td>
